<?xml version="1.0" encoding="utf-8"?>
<!--
    This file is part of Handbook for Melee.

    Handbook for Melee is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Handbook for Melee is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Handbook for Melee.  If not, see <http://www.gnu.org/licenses/>
-->
<resources>
    <string name="app_name">Handbook for Melee</string>

    <string name="debug_text">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
        HHHHHHHHHHHHHHHHHHHHHAHAHAHAHAHAAAAAAAAAAAAAAAAAAAAAAAAAAAHAAHAHAHAHAHAAHAHA
        AHAHAHAAHHAHAHAAAAAAAAAAAAAAHAHAHAHAHHAHAHAHAHAAHAHMELEEISFAIRANDBALANCED"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_characters">Characters</string>
    <string name="title_fundamentals">Fundamentals</string>
    <string name="title_stages">Stages</string>
    <string name="title_matchups">Matchups</string>
    <string name="title_advancedtech">Advanced Techniques</string>
    <string name="title_term">Terminology</string>
    <string name="title_uniquetech">Unique Techniques</string>
    <string name="title_healthy">Staying Healthy</string>

    <string name="search_hint">Search here</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_title">Search</string>
    <string name="filter_title">Filter</string>
    <string name="action_healthy">Staying Healthy</string>
    <string name="action_settings">Settings</string>
    <string name="action_support">Support The Dev</string>
    <string name="action_removeads">Remove ads</string>
    <string name="action_info">Help</string>
    <string name="action_about">About</string>
    <string name="close">CLOSE</string>
    <string name="support">Support the dev</string>
    <string name="twitter">Twitter</string>
    <string name="version">v2.1.5</string>
    <string name="changes"><b>Post Anniversary update! Thank you everyone for your support for a whole year!</b>
        \nI plan on doing a major rewrite soon, so I\'m fixing some issues since the rewrite will take long
        \nNew icon! I made this one, I hope you all like it! It\'s material! :D
        \nFix the issues regarding hitbox move listing (special moves)
        \nFixed some issues with the video in techniques
        \nAdded Lunchables to notable Roy players
        \nRename Frame Data to Hitboxes
        \nMinor fixes here and there</string>
    <string name="about_text">\t\t\tHandbook for Melee v2.1.5
    \n
    \n\t\t\tBased on information from:
    \n\t\t\t\twww.ssbwiki.com/
    \n\t\t\t\twww.smashboards.com/
    \n\t\t\t\tSuper Smash Bros. Melee
    \n\t\t\t\twww.supersmashbros.wikia.com/
    \n\t\t\t\twww.reddit.com/r/smashbros/wiki/bkam/
    \n
    \n\t\t\tAll thanks to:
    \n\t\t\t\tZhu
    \n\t\t\t\tVesne
    \n\t\t\t\tssbwiki
    \n\t\t\t\tWobbles
    \n\t\t\t\tNintendo
    \n\t\t\t\tMew2King
    \n\t\t\t\t/u/djloreddit
    \n\t\t\t\tschmooblidon
    \n\t\t\t\t/u/DigitalAge98
    \n\t\t\t\tsupersmashwikia
    \n\t\t\t\tMy friends and testers
    \n\t\t\t\tTristan, Tyler, Luis and Juan
    \n\t\t\t\tStratocaster\'s Hitbox System
    \n
    \n\t\t\tLibraries used:
    \n\t\t\t\tslidr
    \n\t\t\t\tmaterialscrollbar
    \n\t\t\t\tandroid-gif-drawable
    \n\t\t\t\texpandablerecyclerview
    </string>
    <string name="info_text">
    \n\t\t\t\tLong click for alternate functions
    \n
    \n\t\t\t\tRed boxes indicate a hitbox
    \n\t\t\t\tBlue boxes indicate intangibility
    \n\t\t\t\tYellow boxes indicate hurtboxes
    \n\t\t\t\tGreen boxes indicate reflect boxes
    \n\t\t\t\tPink boxes indicate grab boxes
    </string>

    <string name="pref_ads">pref_ads</string>
    <string name="pref_ads_title">Hide ads</string>

    <string name="pref_theme">pref_theme</string>
    <string name="pref_theme_title">Theme</string>

    <string name="pref_theme_value_light">light</string>
    <string name="pref_theme_value_dark">dark</string>
    <string name="pref_theme_value_black">black</string>
    <string name="pref_theme_value_blackactionbar">black with colored action bar</string>

    <string name="pref_default">pref_default</string>
    <string name="pref_default_title">Start up page</string>

    <string name="pref_main">pref_main</string>
    <string name="pref_main_title">Main</string>

    <string name="pref_exit">pref_exit</string>
    <string name="pref_exit_title">Show exit dialog</string>

    <string name="pref_textsize">text_size</string>
    <string name="pref_textsize_title">Text size</string>

    <string name="pref_tier">pref_tier</string>
    <string name="pref_tier_title">Sort characters by tier</string>

    <string name="pref_uniquegroup">pref_uniquegroup</string>
    <string name="pref_uniquegroup_title">Group unique techniques by character</string>

    <string name="pref_open">pref_open</string>
    <string name="pref_open_title">Open navigation menu on launch</string>

    <string name="pref_toast">pref_toast</string>
    <string name="pref_toast_title">Show the stretch toast</string>
</resources>
